// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`-> OK 1`] = `
Object {
  "configurations": Array [
    Object {
      "CONDITION": "hasTeamAccount",
      "CONTEXT": Object {
        "flags": Object {
          "push.smart_reply.enabled": true,
        },
        "logs": Object {
          "smart_reply": "enabled",
        },
        "source": "global",
      },
      "HANDLER": "MOBMAIL",
    },
    Object {
      "CONTEXT": Object {
        "flags": Object {
          "a": "b",
        },
        "source": "experiment",
      },
      "HANDLER": "MOBMAIL",
    },
  ],
  "logs": Object {
    "exp_boxes": "51436,0,95;49231,0,71;38033,0,63;46920,0,9;46959,0,99;40425,0,8",
  },
}
`;

exports[`-> OK w/params 1`] = `
Object {
  "configurations": Array [
    Object {
      "CONTEXT": Object {
        "flags": Object {
          "push.smart_reply.enabled": true,
        },
        "logs": Object {
          "smart_reply": "enabled",
        },
        "source": "global",
      },
      "HANDLER": "MOBMAIL",
    },
    Object {
      "CONTEXT": Object {
        "flags": Object {
          "a": "b",
        },
        "source": "experiment",
      },
      "HANDLER": "MOBMAIL",
    },
  ],
  "logs": Object {
    "exp_boxes": "51436,0,95;49231,0,71;38033,0,63;46920,0,9;46959,0,99;40425,0,8",
  },
}
`;

exports[`дергает модель и сервис с правильными параметрами 1`] = `
Array [
  Array [
    "experiments",
    Object {
      "uaasRequest": Object {
        "ConfigType": "PRODUCTION",
        "UsersplitRequestParams": Object {
          "Ip": "FAKE_IP",
          "Location": "FAKE_LOCATION",
          "Restrictions": Object {
            "MobilePlatform": "android",
            "Service": "mail-mobile-apps",
          },
          "SplitIds": Object {
            "Uuid": "deadbeef42",
          },
          "Timestamp": 1580554500751,
        },
      },
    },
  ],
]
`;

exports[`дергает модель и сервис с правильными параметрами 2`] = `
Array [
  Array [
    "/mmapi-flags/android",
    Object {
      "ttl": 300000,
    },
  ],
]
`;
